--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,30 @@
 [project]
 name = "mcp-helvarnet"
 version = "0.1.0"
-description = "Add your description here"
+authors = [
+  { name="Nikhil Kapila", email="info@nkapila.me" },
+]
+description = "MCP server to control and potentially commission your Helvar Control System"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "aiohelvar>=0.9.7",
     "fastmcp>=2.12.3",
 ]
+
+license = "MIT"
+license-files = ["LICEN[CS]E*"]
+
+[project.urls]
+Homepage = "https://github.com/nkapila6/mcp-helvarnet"
+Issues = "https://github.com/nkapila6/mcp-helvarnet/issues"
+
+[build-system]
+requires = [ "hatchling"]
+build-backend = "hatchling.build"
+
+[project.scripts]
+mcp-helvarnet = "mcp_helvarnet.main:mcp.run"
+
+# [tool.hatch.build.targets.sdist]
+# include = ["embedder/*", "utils/*"]
