--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.10"
 dependencies = [
     "aiohelvar>=0.9.7",
     "fastmcp>=2.12.3",
+    "typer>=0.19.2",
 ]
 
 license = "MIT"
@@ -25,6 +26,9 @@ build-backend = "hatchling.build"
 
 [project.scripts]
 mcp-helvarnet = "mcp_helvarnet.main:mcp.run"
+
+[tool.ruff]
+fix=true
 
 # [tool.hatch.build.targets.sdist]
 # include = ["embedder/*", "utils/*"]
