--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ requires = [ "hatchling"]
 build-backend = "hatchling.build"
 
 [project.scripts]
-mcp-helvarnet = "mcp_helvarnet.main:mcp.run"
+mcp-helvarnet = "mcp_helvarnet.main:cli"
 
 [tool.ruff]
 fix=true
